Fill info button when selected

--- a/Birds/Base.lproj/Main.storyboard
+++ b/Birds/Base.lproj/Main.storyboard
@@ -71,21 +71,17 @@
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Detail" id="mOI-FS-AaM">
-                        <barButtonItem key="rightBarButtonItem" style="done" id="674-sw-gQQ">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" id="dXR-pG-gAf">
-                                <rect key="frame" x="337" y="11" width="22" height="22"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <connections>
-                                    <action selector="infoButtonTapped:" destination="JEX-9P-axG" eventType="touchUpInside" id="iHK-1B-bvu"/>
-                                </connections>
-                            </button>
+                        <barButtonItem key="rightBarButtonItem" image="info" id="gkf-hC-G0V">
+                            <connections>
+                                <action selector="infoButtonTapped:" destination="JEX-9P-axG" id="uOW-fL-rPa"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="birdDescriptionTextView" destination="JJo-yh-wp5" id="dcZ-m5-Skw"/>
                         <outlet property="birdImageView" destination="QCo-hC-ynV" id="rYc-44-LhE"/>
                         <outlet property="birdImageViewButton" destination="ap3-Ys-VPf" id="VKC-PT-1b1"/>
-                        <outlet property="infoButton" destination="dXR-pG-gAf" id="J9d-De-zjc"/>
+                        <outlet property="infoButton" destination="gkf-hC-G0V" id="IHW-g8-3gb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FJe-Yq-33r" sceneMemberID="firstResponder"/>
@@ -193,6 +189,9 @@
             <point key="canvasLocation" x="-45" y="129"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="info" width="22" height="22"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="6S0-TO-JiA"/>
     </inferredMetricsTieBreakers>
