--- a/Birds/Base.lproj/Main.storyboard
+++ b/Birds/Base.lproj/Main.storyboard
@@ -88,12 +88,18 @@
                                     <action selector="listenSound:" destination="JEX-9P-axG" id="loA-D4-RP3"/>
                                 </connections>
                             </barButtonItem>
+                            <barButtonItem image="favorite" id="Xmd-oH-BmK">
+                                <connections>
+                                    <action selector="addToFavorites:" destination="JEX-9P-axG" id="Iw8-89-WsN"/>
+                                </connections>
+                            </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="birdDescriptionTextView" destination="JJo-yh-wp5" id="dcZ-m5-Skw"/>
                         <outlet property="birdImageView" destination="QCo-hC-ynV" id="rYc-44-LhE"/>
                         <outlet property="birdImageViewButton" destination="ap3-Ys-VPf" id="VKC-PT-1b1"/>
+                        <outlet property="favoriteButton" destination="Xmd-oH-BmK" id="gPX-IP-jt6"/>
                         <outlet property="infoButton" destination="gkf-hC-G0V" id="IHW-g8-3gb"/>
                         <outlet property="showMapImageButton" destination="bPO-tK-v28" id="XvV-Sm-YMS"/>
                         <outlet property="soundButton" destination="pYx-gQ-6zZ" id="kFc-mR-NwE"/>
@@ -130,7 +136,7 @@
                                 <rect key="frame" x="0.0" y="22" width="375" height="75"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WCw-Qf-5nD" id="37f-cq-3Eg">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="74"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="74.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fq5-D0-F1Q">
@@ -225,6 +231,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="favorite" width="22" height="22"/>
         <image name="info" width="22" height="22"/>
         <image name="map" width="22" height="22"/>
         <image name="settings" width="22" height="22"/>
